--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id='content'>
             <h1 style='margin-bottom: -35px;'>404</h1>
             <h2>File Not Found</h2>
-            <h4>by skkuull</h4>
+            <h4>by Bwenoo</h4>
         </div>
     </body>
 </html>
