--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
         <div id='content'>
             <h1 style='margin-bottom: -35px;'>404</h1>
             <h2>File Not Found</h2>
-<<<<<<< HEAD
-            <h4>by Bwenoo</h4>
-=======
-            <h4>by Bwen0</h4>
->>>>>>> 4e35fc30a28e4059b6293ee4b8ae328d7976e8ad
+            <h4>by Bweno</h4>
+            <h4>bweno#6931</h4>
         </div>
     </body>
 </html>
